// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tests for <AlertCall /> should match SnapShot 1`] = `
<div className="md-alert md-alert--call">
  <div className="md-alert__title">
    Incoming call
  </div>
  <div className="md-alert__caller">
    <Avatar alt="Jefe Guadelupe" size="xlarge" title="Jefe Guadelupe" backgroundColor="" buttonClassName="" className={{...}} color="" failureBadge={false} hasNotification={false} hideDefaultTooltip={false} icon={{...}} initials={{...}} isDecrypting={false} isOverview={false} onClick={{...}} src={{...}} theme={{...}} type="" />
    <div className="md-alert__caller-title">
      Jefe Guadelupe
    </div>
    <div className="md-alert__caller-subtitle">
      +1 408-555-1212
    </div>
  </div>
  <UIDReset />
  <div className="md-alert--call--buttons">
    <ContextTransform(Button) ariaLabel="reject call" circle={true} color="red" onClick={{...}} size={44}>
      <Icon name="cancel_24" append={false} ariaLabel={{...}} buttonClassName="" buttonProps={{...}} color="" className="" description="" onClick={{...}} prepend={false} size={{...}} sizeOverride={false} style={{...}} title="" type="" />
    </ContextTransform(Button)>
  </div>
</div>
`;

exports[`tests for <AlertCall /> should match SnapShot with devices 1`] = `
<div className="md-alert md-alert--call">
  <div className="md-alert__title">
    Incoming call
  </div>
  <div className="md-alert__caller">
    <Avatar alt="Jefe Guadelupe" size="xlarge" title="Jefe Guadelupe" backgroundColor="" buttonClassName="" className={{...}} color="" failureBadge={false} hasNotification={false} hideDefaultTooltip={false} icon={{...}} initials={{...}} isDecrypting={false} isOverview={false} onClick={{...}} src={{...}} theme={{...}} type="" />
    <div className="md-alert__caller-title">
      Jefe Guadelupe
    </div>
    <div className="md-alert__caller-subtitle">
      +1 408-555-1212
    </div>
  </div>
  <UIDReset>
    <DeviceListCall defaultSelected={0} devices={{...}} header="Device selection" onSelect={{...}} className="" />
  </UIDReset>
  <div className="md-alert--call--buttons">
    <ContextTransform(Button) ariaLabel="reject call" circle={true} color="red" onClick={{...}} size={44}>
      <Icon name="cancel_24" append={false} ariaLabel={{...}} buttonClassName="" buttonProps={{...}} color="" className="" description="" onClick={{...}} prepend={false} size={{...}} sizeOverride={false} style={{...}} title="" type="" />
    </ContextTransform(Button)>
  </div>
</div>
`;
